# testcookie-nginx-module

./: CHANGELOG  CMakeLists.txt  Changelog  Development  README  README.markdown  README.md  config  index.html  install.sh  nginx.patch  params.json
cert/: nginx-selfsigned.crt  nginx-selfsigned.key
doc/: usecases.txt
html/development/: 50x.html  bot.html  iron.js
html/development/template/: fingerPerRequest.js  setCookieRedefined.html  setcookie.html  tmp.html  tmp.js  zibil.js
html/production/: 40x.html  cryptojs.js  fingerprint.js  iron.js
lib/sregex/: libsregex.so.0  sregex-cli
manager/: application.properties  innovera.service  runservice.sh
modules/nginx-http-footer-filter/: README.md  config
modules/ngx_http_bot_protection_module/: config
modules/ngx_http_bot_protection_module/doc/: usecases.txt
modules/ngx_http_bot_protection_module/src/: ngx_http_bot_protection_module.c  ngx_http_bot_protection_module.h
modules/ngx_http_bot_protection_module/t/: 01crypto.t
modules/ngx_http_bot_protection_module/util/: Iron.js  tests.sh  valgrind.sh
modules/ngx_http_bot_protection_module/util/back/: aes.js  aes.patch
modules/ngx_http_captcha_module/: README.md  config  ngx_http_captcha_module.c
modules/ngx_http_header_inspect/: README  config  ironaes.c  ironaes.h  ngx_http_header_inspect.c
modules/ngx_http_vts/share/: status.template.html
modules/ngx_http_vts/util/: tplToDefine.sh
modules/ngx_input_validation_module/: config  ngx_input_validation_module.c  readme.txt
modules/replace-filter-nginx-module/: .travis.yml  config
modules/replace-filter-nginx-module/src/: ddebug.h  ngx_http_replace_filter_module.c  ngx_http_replace_filter_module.h  ngx_http_replace_parse.c  ngx_http_replace_parse.h  ngx_http_replace_script.c  ngx_http_replace_script.h  ngx_http_replace_util.c  ngx_http_replace_util.h
modules/replace-filter-nginx-module/t/: 01-sanity.t  02-max-buffered.t  03-var.t  04-capturing.t  05-capturing-max-buffered.t  06-if.t  07-multi.t  08-gzip.t  09-unused.t  10-last-modified.t  11-skip.t
modules/replace-filter-nginx-module/util/: build.sh
src/: ngx_http_testcookie_access_module.c  ngx_http_testcookie_filter_module.c
t/: 00base.t  01crypto.t
util/: aes.patch
