cmake_minimum_required(VERSION 3.17)
project(ironfox)

set(CMAKE_CXX_STANDARD 14)

include_directories(modules/ngx_http_header_inspect)
include_directories(modules/ngx_http_vts/src)
include_directories(modules/replace-filter-nginx-module/src)
include_directories(nginx-1.19.2/objs)
include_directories(nginx-1.19.2/src/core)
include_directories(nginx-1.19.2/src/event)
include_directories(nginx-1.19.2/src/http)
include_directories(nginx-1.19.2/src/http/modules)
include_directories(nginx-1.19.2/src/http/modules/perl)
include_directories(nginx-1.19.2/src/http/v2)
include_directories(nginx-1.19.2/src/mail)
include_directories(nginx-1.19.2/src/os/unix)
include_directories(nginx-1.19.2/src/stream)

add_executable(ironfox
        cert/nginx-selfsigned.crt
        cert/nginx-selfsigned.key
        html/40x.html
        html/50x.html
        html/bot.html
        html/fingerprint.js
        html/hourglass.gif
        html/iron.js
        html/sweet-alert.css
        html/sweet-alert.min.js
        manager/application.properties
        manager/innovera.service
        manager/runservice.sh
        modules/nginx-eval-module/Changelog
        modules/nginx-eval-module/config
        modules/nginx-eval-module/LICENCE
        modules/nginx-eval-module/ngx_http_eval_module.c
        modules/nginx-eval-module/README
        modules/nginx-http-footer-filter/config
        modules/nginx-http-footer-filter/ngx_http_footer_filter_module.c
        modules/nginx-http-footer-filter/README.md
        modules/ngx_http_bot_protection_module/doc/usecases.txt
        modules/ngx_http_bot_protection_module/src/ngx_http_bot_protection_module.c
        modules/ngx_http_bot_protection_module/t/00base.t
        modules/ngx_http_bot_protection_module/t/01crypto.t
        modules/ngx_http_bot_protection_module/util/back/aes.js
        modules/ngx_http_bot_protection_module/util/back/aes.patch
        modules/ngx_http_bot_protection_module/util/back/tests.sh
        modules/ngx_http_bot_protection_module/util/back/valgrind.sh
        modules/ngx_http_bot_protection_module/util/Iron.js
        modules/ngx_http_bot_protection_module/util/tests.sh
        modules/ngx_http_bot_protection_module/util/valgrind.sh
        modules/ngx_http_bot_protection_module/config
        modules/ngx_http_captcha_module/config
        modules/ngx_http_captcha_module/ngx_http_captcha_module.c
        modules/ngx_http_captcha_module/README.md
        modules/ngx_http_header_inspect/config
        modules/ngx_http_header_inspect/ironaes.c
        modules/ngx_http_header_inspect/ironaes.h
        modules/ngx_http_header_inspect/ngx_http_header_inspect.c
        modules/ngx_http_header_inspect/README
        modules/ngx_http_vts/share/status.compress.html
        modules/ngx_http_vts/share/status.template.html
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_control.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_control.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_display.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_display.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_display_json.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_display_json.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_display_prometheus.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_display_prometheus.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_dump.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_dump.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_filter.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_filter.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_limit.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_limit.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_module.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_module.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_module_html.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_node.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_node.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_set.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_set.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_shm.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_shm.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_string.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_string.h
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_variables.c
        modules/ngx_http_vts/src/ngx_http_vhost_traffic_status_variables.h
        modules/ngx_http_vts/t/000.display_html.t
        modules/ngx_http_vts/t/001.display_json.t
        modules/ngx_http_vts/t/002.check_json_syntax.t
        modules/ngx_http_vts/t/003.filter_by_host.t
        modules/ngx_http_vts/t/004.filter_by_set_key.t
        modules/ngx_http_vts/t/005.filter_check_duplicate.t
        modules/ngx_http_vts/t/006.control_status_fully.t
        modules/ngx_http_vts/t/007.control_status_group.t
        modules/ngx_http_vts/t/008.control_status_zone.t
        modules/ngx_http_vts/t/009.control_reset_fully.t
        modules/ngx_http_vts/t/010.control_reset_group.t
        modules/ngx_http_vts/t/011.control_reset_zone.t
        modules/ngx_http_vts/t/012.control_delete_fully.t
        modules/ngx_http_vts/t/013.control_delete_group.t
        modules/ngx_http_vts/t/014.control_delete_zone.t
        modules/ngx_http_vts/t/015.vts_variables_by_lua.t
        modules/ngx_http_vts/t/016.limit_traffic_by_lua.t
        modules/ngx_http_vts/t/017.limit_traffic.t
        modules/ngx_http_vts/t/018.limit_traffic_by_set_key.t
        modules/ngx_http_vts/t/019.limit_traffic_check_duplicate.t
        modules/ngx_http_vts/t/020.display_sum_key.t
        modules/ngx_http_vts/t/021.set_by_filter.t
        modules/ngx_http_vts/util/fileToHex.pl
        modules/ngx_http_vts/util/tplToBuffer.sh
        modules/ngx_http_vts/util/tplToDefine.sh
        modules/ngx_http_vts/Changes
        modules/ngx_http_vts/config
        modules/ngx_http_vts/LICENSE
        modules/ngx_http_vts/README.md
        modules/ngx_input_validation_module/config
        modules/ngx_input_validation_module/ngx_input_validation_module.c
        modules/ngx_input_validation_module/readme.txt
        modules/replace-filter-nginx-module/src/ddebug.h
        modules/replace-filter-nginx-module/src/ngx_http_replace_filter_module.c
        modules/replace-filter-nginx-module/src/ngx_http_replace_filter_module.h
        modules/replace-filter-nginx-module/src/ngx_http_replace_parse.c
        modules/replace-filter-nginx-module/src/ngx_http_replace_parse.h
        modules/replace-filter-nginx-module/src/ngx_http_replace_script.c
        modules/replace-filter-nginx-module/src/ngx_http_replace_script.h
        modules/replace-filter-nginx-module/src/ngx_http_replace_util.c
        modules/replace-filter-nginx-module/src/ngx_http_replace_util.h
        modules/replace-filter-nginx-module/t/01-sanity.t
        modules/replace-filter-nginx-module/t/02-max-buffered.t
        modules/replace-filter-nginx-module/t/03-var.t
        modules/replace-filter-nginx-module/t/04-capturing.t
        modules/replace-filter-nginx-module/t/05-capturing-max-buffered.t
        modules/replace-filter-nginx-module/t/06-if.t
        modules/replace-filter-nginx-module/t/07-multi.t
        modules/replace-filter-nginx-module/t/08-gzip.t
        modules/replace-filter-nginx-module/t/09-unused.t
        modules/replace-filter-nginx-module/t/10-last-modified.t
        modules/replace-filter-nginx-module/t/11-skip.t
        modules/replace-filter-nginx-module/util/build.sh
        modules/replace-filter-nginx-module/config
        modules/replace-filter-nginx-module/README.markdown
        modules/replace-filter-nginx-module/valgrind.suppress
        nginx-1.19.2/auto/cc/acc
        nginx-1.19.2/auto/cc/bcc
        nginx-1.19.2/auto/cc/ccc
        nginx-1.19.2/auto/cc/clang
        nginx-1.19.2/auto/cc/conf
        nginx-1.19.2/auto/cc/gcc
        nginx-1.19.2/auto/cc/icc
        nginx-1.19.2/auto/cc/msvc
        nginx-1.19.2/auto/cc/name
        nginx-1.19.2/auto/cc/owc
        nginx-1.19.2/auto/cc/sunc
        nginx-1.19.2/auto/lib/geoip/conf
        nginx-1.19.2/auto/lib/google-perftools/conf
        nginx-1.19.2/auto/lib/libatomic/conf
        nginx-1.19.2/auto/lib/libatomic/make
        nginx-1.19.2/auto/lib/libgd/conf
        nginx-1.19.2/auto/lib/libxslt/conf
        nginx-1.19.2/auto/lib/openssl/conf
        nginx-1.19.2/auto/lib/openssl/make
        nginx-1.19.2/auto/lib/openssl/makefile.bcc
        nginx-1.19.2/auto/lib/openssl/makefile.msvc
        nginx-1.19.2/auto/lib/pcre/conf
        nginx-1.19.2/auto/lib/pcre/make
        nginx-1.19.2/auto/lib/pcre/makefile.bcc
        nginx-1.19.2/auto/lib/pcre/makefile.msvc
        nginx-1.19.2/auto/lib/pcre/makefile.owc
        nginx-1.19.2/auto/lib/perl/conf
        nginx-1.19.2/auto/lib/perl/make
        nginx-1.19.2/auto/lib/zlib/conf
        nginx-1.19.2/auto/lib/zlib/make
        nginx-1.19.2/auto/lib/zlib/makefile.bcc
        nginx-1.19.2/auto/lib/zlib/makefile.msvc
        nginx-1.19.2/auto/lib/zlib/makefile.owc
        nginx-1.19.2/auto/lib/conf
        nginx-1.19.2/auto/lib/make
        nginx-1.19.2/auto/os/conf
        nginx-1.19.2/auto/os/darwin
        nginx-1.19.2/auto/os/freebsd
        nginx-1.19.2/auto/os/linux
        nginx-1.19.2/auto/os/solaris
        nginx-1.19.2/auto/os/win32
        nginx-1.19.2/auto/types/sizeof
        nginx-1.19.2/auto/types/typedef
        nginx-1.19.2/auto/types/uintptr_t
        nginx-1.19.2/auto/types/value
        nginx-1.19.2/auto/define
        nginx-1.19.2/auto/endianness
        nginx-1.19.2/auto/feature
        nginx-1.19.2/auto/have
        nginx-1.19.2/auto/have_headers
        nginx-1.19.2/auto/headers
        nginx-1.19.2/auto/include
        nginx-1.19.2/auto/init
        nginx-1.19.2/auto/install
        nginx-1.19.2/auto/make
        nginx-1.19.2/auto/module
        nginx-1.19.2/auto/modules
        nginx-1.19.2/auto/nohave
        nginx-1.19.2/auto/options
        nginx-1.19.2/auto/sources
        nginx-1.19.2/auto/stubs
        nginx-1.19.2/auto/summary
        nginx-1.19.2/auto/threads
        nginx-1.19.2/auto/unix
        nginx-1.19.2/conf/fastcgi.conf
        nginx-1.19.2/conf/fastcgi_params
        nginx-1.19.2/conf/koi-utf
        nginx-1.19.2/conf/koi-win
        nginx-1.19.2/conf/mime.types
        nginx-1.19.2/conf/nginx.conf
        nginx-1.19.2/conf/scgi_params
        nginx-1.19.2/conf/uwsgi_params
        nginx-1.19.2/conf/win-utf
        nginx-1.19.2/contrib/unicode2nginx/koi-utf
        nginx-1.19.2/contrib/unicode2nginx/unicode-to-nginx.pl
        nginx-1.19.2/contrib/unicode2nginx/win-utf
        nginx-1.19.2/contrib/vim/ftdetect/nginx.vim
        nginx-1.19.2/contrib/vim/ftplugin/nginx.vim
        nginx-1.19.2/contrib/vim/indent/nginx.vim
        nginx-1.19.2/contrib/vim/syntax/nginx.vim
        nginx-1.19.2/contrib/geo2nginx.pl
        nginx-1.19.2/contrib/README
        nginx-1.19.2/html/50x.html
        nginx-1.19.2/html/index.html
        nginx-1.19.2/man/nginx.8
        nginx-1.19.2/objs/autoconf.err
        nginx-1.19.2/objs/Makefile
        nginx-1.19.2/objs/nginx
        nginx-1.19.2/objs/nginx.8
        nginx-1.19.2/objs/ngx_auto_config.h
        nginx-1.19.2/objs/ngx_auto_headers.h
        nginx-1.19.2/objs/ngx_http_bot_protection_module.so
        nginx-1.19.2/objs/ngx_http_bot_protection_module_modules.c
        nginx-1.19.2/objs/ngx_http_header_inspect_module.so
        nginx-1.19.2/objs/ngx_http_header_inspect_module_modules.c
        nginx-1.19.2/objs/ngx_http_replace_filter_module.so
        nginx-1.19.2/objs/ngx_http_replace_filter_module_modules.c
        nginx-1.19.2/objs/ngx_modules.c
        nginx-1.19.2/src/core/nginx.c
        nginx-1.19.2/src/core/nginx.h
        nginx-1.19.2/src/core/ngx_array.c
        nginx-1.19.2/src/core/ngx_array.h
        nginx-1.19.2/src/core/ngx_buf.c
        nginx-1.19.2/src/core/ngx_buf.h
        nginx-1.19.2/src/core/ngx_conf_file.c
        nginx-1.19.2/src/core/ngx_conf_file.h
        nginx-1.19.2/src/core/ngx_config.h
        nginx-1.19.2/src/core/ngx_connection.c
        nginx-1.19.2/src/core/ngx_connection.h
        nginx-1.19.2/src/core/ngx_core.h
        nginx-1.19.2/src/core/ngx_cpuinfo.c
        nginx-1.19.2/src/core/ngx_crc.h
        nginx-1.19.2/src/core/ngx_crc32.c
        nginx-1.19.2/src/core/ngx_crc32.h
        nginx-1.19.2/src/core/ngx_crypt.c
        nginx-1.19.2/src/core/ngx_crypt.h
        nginx-1.19.2/src/core/ngx_cycle.c
        nginx-1.19.2/src/core/ngx_cycle.h
        nginx-1.19.2/src/core/ngx_file.c
        nginx-1.19.2/src/core/ngx_file.h
        nginx-1.19.2/src/core/ngx_hash.c
        nginx-1.19.2/src/core/ngx_hash.h
        nginx-1.19.2/src/core/ngx_inet.c
        nginx-1.19.2/src/core/ngx_inet.h
        nginx-1.19.2/src/core/ngx_list.c
        nginx-1.19.2/src/core/ngx_list.h
        nginx-1.19.2/src/core/ngx_log.c
        nginx-1.19.2/src/core/ngx_log.h
        nginx-1.19.2/src/core/ngx_md5.c
        nginx-1.19.2/src/core/ngx_md5.h
        nginx-1.19.2/src/core/ngx_module.c
        nginx-1.19.2/src/core/ngx_module.h
        nginx-1.19.2/src/core/ngx_murmurhash.c
        nginx-1.19.2/src/core/ngx_murmurhash.h
        nginx-1.19.2/src/core/ngx_open_file_cache.c
        nginx-1.19.2/src/core/ngx_open_file_cache.h
        nginx-1.19.2/src/core/ngx_output_chain.c
        nginx-1.19.2/src/core/ngx_palloc.c
        nginx-1.19.2/src/core/ngx_palloc.h
        nginx-1.19.2/src/core/ngx_parse.c
        nginx-1.19.2/src/core/ngx_parse.h
        nginx-1.19.2/src/core/ngx_parse_time.c
        nginx-1.19.2/src/core/ngx_parse_time.h
        nginx-1.19.2/src/core/ngx_proxy_protocol.c
        nginx-1.19.2/src/core/ngx_proxy_protocol.h
        nginx-1.19.2/src/core/ngx_queue.c
        nginx-1.19.2/src/core/ngx_queue.h
        nginx-1.19.2/src/core/ngx_radix_tree.c
        nginx-1.19.2/src/core/ngx_radix_tree.h
        nginx-1.19.2/src/core/ngx_rbtree.c
        nginx-1.19.2/src/core/ngx_rbtree.h
        nginx-1.19.2/src/core/ngx_regex.c
        nginx-1.19.2/src/core/ngx_regex.h
        nginx-1.19.2/src/core/ngx_resolver.c
        nginx-1.19.2/src/core/ngx_resolver.h
        nginx-1.19.2/src/core/ngx_rwlock.c
        nginx-1.19.2/src/core/ngx_rwlock.h
        nginx-1.19.2/src/core/ngx_sha1.c
        nginx-1.19.2/src/core/ngx_sha1.h
        nginx-1.19.2/src/core/ngx_shmtx.c
        nginx-1.19.2/src/core/ngx_shmtx.h
        nginx-1.19.2/src/core/ngx_slab.c
        nginx-1.19.2/src/core/ngx_slab.h
        nginx-1.19.2/src/core/ngx_spinlock.c
        nginx-1.19.2/src/core/ngx_string.c
        nginx-1.19.2/src/core/ngx_string.h
        nginx-1.19.2/src/core/ngx_syslog.c
        nginx-1.19.2/src/core/ngx_syslog.h
        nginx-1.19.2/src/core/ngx_thread_pool.c
        nginx-1.19.2/src/core/ngx_thread_pool.h
        nginx-1.19.2/src/core/ngx_times.c
        nginx-1.19.2/src/core/ngx_times.h
        nginx-1.19.2/src/event/modules/ngx_devpoll_module.c
        nginx-1.19.2/src/event/modules/ngx_epoll_module.c
        nginx-1.19.2/src/event/modules/ngx_eventport_module.c
        nginx-1.19.2/src/event/modules/ngx_kqueue_module.c
        nginx-1.19.2/src/event/modules/ngx_poll_module.c
        nginx-1.19.2/src/event/modules/ngx_select_module.c
        nginx-1.19.2/src/event/modules/ngx_win32_poll_module.c
        nginx-1.19.2/src/event/modules/ngx_win32_select_module.c
        nginx-1.19.2/src/event/ngx_event.c
        nginx-1.19.2/src/event/ngx_event.h
        nginx-1.19.2/src/event/ngx_event_accept.c
        nginx-1.19.2/src/event/ngx_event_connect.c
        nginx-1.19.2/src/event/ngx_event_connect.h
        nginx-1.19.2/src/event/ngx_event_openssl.c
        nginx-1.19.2/src/event/ngx_event_openssl.h
        nginx-1.19.2/src/event/ngx_event_openssl_stapling.c
        nginx-1.19.2/src/event/ngx_event_pipe.c
        nginx-1.19.2/src/event/ngx_event_pipe.h
        nginx-1.19.2/src/event/ngx_event_posted.c
        nginx-1.19.2/src/event/ngx_event_posted.h
        nginx-1.19.2/src/event/ngx_event_timer.c
        nginx-1.19.2/src/event/ngx_event_timer.h
        nginx-1.19.2/src/event/ngx_event_udp.c
        nginx-1.19.2/src/http/modules/perl/Makefile.PL
        nginx-1.19.2/src/http/modules/perl/nginx.pm
        nginx-1.19.2/src/http/modules/perl/nginx.xs
        nginx-1.19.2/src/http/modules/perl/ngx_http_perl_module.c
        nginx-1.19.2/src/http/modules/perl/ngx_http_perl_module.h
        nginx-1.19.2/src/http/modules/perl/typemap
        nginx-1.19.2/src/http/modules/ngx_http_access_module.c
        nginx-1.19.2/src/http/modules/ngx_http_addition_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_auth_basic_module.c
        nginx-1.19.2/src/http/modules/ngx_http_auth_request_module.c
        nginx-1.19.2/src/http/modules/ngx_http_autoindex_module.c
        nginx-1.19.2/src/http/modules/ngx_http_browser_module.c
        nginx-1.19.2/src/http/modules/ngx_http_charset_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_chunked_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_dav_module.c
        nginx-1.19.2/src/http/modules/ngx_http_degradation_module.c
        nginx-1.19.2/src/http/modules/ngx_http_empty_gif_module.c
        nginx-1.19.2/src/http/modules/ngx_http_fastcgi_module.c
        nginx-1.19.2/src/http/modules/ngx_http_flv_module.c
        nginx-1.19.2/src/http/modules/ngx_http_geo_module.c
        nginx-1.19.2/src/http/modules/ngx_http_geoip_module.c
        nginx-1.19.2/src/http/modules/ngx_http_grpc_module.c
        nginx-1.19.2/src/http/modules/ngx_http_gunzip_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_gzip_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_gzip_static_module.c
        nginx-1.19.2/src/http/modules/ngx_http_headers_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_image_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_index_module.c
        nginx-1.19.2/src/http/modules/ngx_http_limit_conn_module.c
        nginx-1.19.2/src/http/modules/ngx_http_limit_req_module.c
        nginx-1.19.2/src/http/modules/ngx_http_log_module.c
        nginx-1.19.2/src/http/modules/ngx_http_map_module.c
        nginx-1.19.2/src/http/modules/ngx_http_memcached_module.c
        nginx-1.19.2/src/http/modules/ngx_http_mirror_module.c
        nginx-1.19.2/src/http/modules/ngx_http_mp4_module.c
        nginx-1.19.2/src/http/modules/ngx_http_not_modified_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_proxy_module.c
        nginx-1.19.2/src/http/modules/ngx_http_random_index_module.c
        nginx-1.19.2/src/http/modules/ngx_http_range_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_realip_module.c
        nginx-1.19.2/src/http/modules/ngx_http_referer_module.c
        nginx-1.19.2/src/http/modules/ngx_http_rewrite_module.c
        nginx-1.19.2/src/http/modules/ngx_http_scgi_module.c
        nginx-1.19.2/src/http/modules/ngx_http_secure_link_module.c
        nginx-1.19.2/src/http/modules/ngx_http_slice_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_split_clients_module.c
        nginx-1.19.2/src/http/modules/ngx_http_ssi_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_ssi_filter_module.h
        nginx-1.19.2/src/http/modules/ngx_http_ssl_module.c
        nginx-1.19.2/src/http/modules/ngx_http_ssl_module.h
        nginx-1.19.2/src/http/modules/ngx_http_static_module.c
        nginx-1.19.2/src/http/modules/ngx_http_stub_status_module.c
        nginx-1.19.2/src/http/modules/ngx_http_sub_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_try_files_module.c
        nginx-1.19.2/src/http/modules/ngx_http_upstream_hash_module.c
        nginx-1.19.2/src/http/modules/ngx_http_upstream_ip_hash_module.c
        nginx-1.19.2/src/http/modules/ngx_http_upstream_keepalive_module.c
        nginx-1.19.2/src/http/modules/ngx_http_upstream_least_conn_module.c
        nginx-1.19.2/src/http/modules/ngx_http_upstream_random_module.c
        nginx-1.19.2/src/http/modules/ngx_http_upstream_zone_module.c
        nginx-1.19.2/src/http/modules/ngx_http_userid_filter_module.c
        nginx-1.19.2/src/http/modules/ngx_http_uwsgi_module.c
        nginx-1.19.2/src/http/modules/ngx_http_xslt_filter_module.c
        nginx-1.19.2/src/http/v2/ngx_http_v2.c
        nginx-1.19.2/src/http/v2/ngx_http_v2.h
        nginx-1.19.2/src/http/v2/ngx_http_v2_encode.c
        nginx-1.19.2/src/http/v2/ngx_http_v2_filter_module.c
        nginx-1.19.2/src/http/v2/ngx_http_v2_huff_decode.c
        nginx-1.19.2/src/http/v2/ngx_http_v2_huff_encode.c
        nginx-1.19.2/src/http/v2/ngx_http_v2_module.c
        nginx-1.19.2/src/http/v2/ngx_http_v2_module.h
        nginx-1.19.2/src/http/v2/ngx_http_v2_table.c
        nginx-1.19.2/src/http/ngx_http.c
        nginx-1.19.2/src/http/ngx_http.h
        nginx-1.19.2/src/http/ngx_http_cache.h
        nginx-1.19.2/src/http/ngx_http_config.h
        nginx-1.19.2/src/http/ngx_http_copy_filter_module.c
        nginx-1.19.2/src/http/ngx_http_core_module.c
        nginx-1.19.2/src/http/ngx_http_core_module.h
        nginx-1.19.2/src/http/ngx_http_file_cache.c
        nginx-1.19.2/src/http/ngx_http_header_filter_module.c
        nginx-1.19.2/src/http/ngx_http_parse.c
        nginx-1.19.2/src/http/ngx_http_postpone_filter_module.c
        nginx-1.19.2/src/http/ngx_http_request.c
        nginx-1.19.2/src/http/ngx_http_request.h
        nginx-1.19.2/src/http/ngx_http_request_body.c
        nginx-1.19.2/src/http/ngx_http_script.c
        nginx-1.19.2/src/http/ngx_http_script.h
        nginx-1.19.2/src/http/ngx_http_special_response.c
        nginx-1.19.2/src/http/ngx_http_upstream.c
        nginx-1.19.2/src/http/ngx_http_upstream.h
        nginx-1.19.2/src/http/ngx_http_upstream_round_robin.c
        nginx-1.19.2/src/http/ngx_http_upstream_round_robin.h
        nginx-1.19.2/src/http/ngx_http_variables.c
        nginx-1.19.2/src/http/ngx_http_variables.h
        nginx-1.19.2/src/http/ngx_http_write_filter_module.c
        nginx-1.19.2/src/mail/ngx_mail.c
        nginx-1.19.2/src/mail/ngx_mail.h
        nginx-1.19.2/src/mail/ngx_mail_auth_http_module.c
        nginx-1.19.2/src/mail/ngx_mail_core_module.c
        nginx-1.19.2/src/mail/ngx_mail_handler.c
        nginx-1.19.2/src/mail/ngx_mail_imap_handler.c
        nginx-1.19.2/src/mail/ngx_mail_imap_module.c
        nginx-1.19.2/src/mail/ngx_mail_imap_module.h
        nginx-1.19.2/src/mail/ngx_mail_parse.c
        nginx-1.19.2/src/mail/ngx_mail_pop3_handler.c
        nginx-1.19.2/src/mail/ngx_mail_pop3_module.c
        nginx-1.19.2/src/mail/ngx_mail_pop3_module.h
        nginx-1.19.2/src/mail/ngx_mail_proxy_module.c
        nginx-1.19.2/src/mail/ngx_mail_smtp_handler.c
        nginx-1.19.2/src/mail/ngx_mail_smtp_module.c
        nginx-1.19.2/src/mail/ngx_mail_smtp_module.h
        nginx-1.19.2/src/mail/ngx_mail_ssl_module.c
        nginx-1.19.2/src/mail/ngx_mail_ssl_module.h
        nginx-1.19.2/src/misc/ngx_cpp_test_module.cpp
        nginx-1.19.2/src/misc/ngx_google_perftools_module.c
        nginx-1.19.2/src/os/unix/ngx_alloc.c
        nginx-1.19.2/src/os/unix/ngx_alloc.h
        nginx-1.19.2/src/os/unix/ngx_atomic.h
        nginx-1.19.2/src/os/unix/ngx_channel.c
        nginx-1.19.2/src/os/unix/ngx_channel.h
        nginx-1.19.2/src/os/unix/ngx_daemon.c
        nginx-1.19.2/src/os/unix/ngx_darwin.h
        nginx-1.19.2/src/os/unix/ngx_darwin_config.h
        nginx-1.19.2/src/os/unix/ngx_darwin_init.c
        nginx-1.19.2/src/os/unix/ngx_darwin_sendfile_chain.c
        nginx-1.19.2/src/os/unix/ngx_dlopen.c
        nginx-1.19.2/src/os/unix/ngx_dlopen.h
        nginx-1.19.2/src/os/unix/ngx_errno.c
        nginx-1.19.2/src/os/unix/ngx_errno.h
        nginx-1.19.2/src/os/unix/ngx_file_aio_read.c
        nginx-1.19.2/src/os/unix/ngx_files.c
        nginx-1.19.2/src/os/unix/ngx_files.h
        nginx-1.19.2/src/os/unix/ngx_freebsd.h
        nginx-1.19.2/src/os/unix/ngx_freebsd_config.h
        nginx-1.19.2/src/os/unix/ngx_freebsd_init.c
        nginx-1.19.2/src/os/unix/ngx_freebsd_sendfile_chain.c
        nginx-1.19.2/src/os/unix/ngx_gcc_atomic_amd64.h
        nginx-1.19.2/src/os/unix/ngx_gcc_atomic_ppc.h
        nginx-1.19.2/src/os/unix/ngx_gcc_atomic_sparc64.h
        nginx-1.19.2/src/os/unix/ngx_gcc_atomic_x86.h
        nginx-1.19.2/src/os/unix/ngx_linux.h
        nginx-1.19.2/src/os/unix/ngx_linux_aio_read.c
        nginx-1.19.2/src/os/unix/ngx_linux_config.h
        nginx-1.19.2/src/os/unix/ngx_linux_init.c
        nginx-1.19.2/src/os/unix/ngx_linux_sendfile_chain.c
        nginx-1.19.2/src/os/unix/ngx_os.h
        nginx-1.19.2/src/os/unix/ngx_posix_config.h
        nginx-1.19.2/src/os/unix/ngx_posix_init.c
        nginx-1.19.2/src/os/unix/ngx_process.c
        nginx-1.19.2/src/os/unix/ngx_process.h
        nginx-1.19.2/src/os/unix/ngx_process_cycle.c
        nginx-1.19.2/src/os/unix/ngx_process_cycle.h
        nginx-1.19.2/src/os/unix/ngx_readv_chain.c
        nginx-1.19.2/src/os/unix/ngx_recv.c
        nginx-1.19.2/src/os/unix/ngx_send.c
        nginx-1.19.2/src/os/unix/ngx_setaffinity.c
        nginx-1.19.2/src/os/unix/ngx_setaffinity.h
        nginx-1.19.2/src/os/unix/ngx_setproctitle.c
        nginx-1.19.2/src/os/unix/ngx_setproctitle.h
        nginx-1.19.2/src/os/unix/ngx_shmem.c
        nginx-1.19.2/src/os/unix/ngx_shmem.h
        nginx-1.19.2/src/os/unix/ngx_socket.c
        nginx-1.19.2/src/os/unix/ngx_socket.h
        nginx-1.19.2/src/os/unix/ngx_solaris.h
        nginx-1.19.2/src/os/unix/ngx_solaris_config.h
        nginx-1.19.2/src/os/unix/ngx_solaris_init.c
        nginx-1.19.2/src/os/unix/ngx_solaris_sendfilev_chain.c
        nginx-1.19.2/src/os/unix/ngx_sunpro_amd64.il
        nginx-1.19.2/src/os/unix/ngx_sunpro_atomic_sparc64.h
        nginx-1.19.2/src/os/unix/ngx_sunpro_sparc64.il
        nginx-1.19.2/src/os/unix/ngx_sunpro_x86.il
        nginx-1.19.2/src/os/unix/ngx_thread.h
        nginx-1.19.2/src/os/unix/ngx_thread_cond.c
        nginx-1.19.2/src/os/unix/ngx_thread_id.c
        nginx-1.19.2/src/os/unix/ngx_thread_mutex.c
        nginx-1.19.2/src/os/unix/ngx_time.c
        nginx-1.19.2/src/os/unix/ngx_time.h
        nginx-1.19.2/src/os/unix/ngx_udp_recv.c
        nginx-1.19.2/src/os/unix/ngx_udp_send.c
        nginx-1.19.2/src/os/unix/ngx_udp_sendmsg_chain.c
        nginx-1.19.2/src/os/unix/ngx_user.c
        nginx-1.19.2/src/os/unix/ngx_user.h
        nginx-1.19.2/src/os/unix/ngx_writev_chain.c
        nginx-1.19.2/src/stream/ngx_stream.c
        nginx-1.19.2/src/stream/ngx_stream.h
        nginx-1.19.2/src/stream/ngx_stream_access_module.c
        nginx-1.19.2/src/stream/ngx_stream_core_module.c
        nginx-1.19.2/src/stream/ngx_stream_geo_module.c
        nginx-1.19.2/src/stream/ngx_stream_geoip_module.c
        nginx-1.19.2/src/stream/ngx_stream_handler.c
        nginx-1.19.2/src/stream/ngx_stream_limit_conn_module.c
        nginx-1.19.2/src/stream/ngx_stream_log_module.c
        nginx-1.19.2/src/stream/ngx_stream_map_module.c
        nginx-1.19.2/src/stream/ngx_stream_proxy_module.c
        nginx-1.19.2/src/stream/ngx_stream_realip_module.c
        nginx-1.19.2/src/stream/ngx_stream_return_module.c
        nginx-1.19.2/src/stream/ngx_stream_script.c
        nginx-1.19.2/src/stream/ngx_stream_script.h
        nginx-1.19.2/src/stream/ngx_stream_split_clients_module.c
        nginx-1.19.2/src/stream/ngx_stream_ssl_module.c
        nginx-1.19.2/src/stream/ngx_stream_ssl_module.h
        nginx-1.19.2/src/stream/ngx_stream_ssl_preread_module.c
        nginx-1.19.2/src/stream/ngx_stream_upstream.c
        nginx-1.19.2/src/stream/ngx_stream_upstream.h
        nginx-1.19.2/src/stream/ngx_stream_upstream_hash_module.c
        nginx-1.19.2/src/stream/ngx_stream_upstream_least_conn_module.c
        nginx-1.19.2/src/stream/ngx_stream_upstream_random_module.c
        nginx-1.19.2/src/stream/ngx_stream_upstream_round_robin.c
        nginx-1.19.2/src/stream/ngx_stream_upstream_round_robin.h
        nginx-1.19.2/src/stream/ngx_stream_upstream_zone_module.c
        nginx-1.19.2/src/stream/ngx_stream_variables.c
        nginx-1.19.2/src/stream/ngx_stream_variables.h
        nginx-1.19.2/src/stream/ngx_stream_write_filter_module.c
        nginx-1.19.2/CHANGES
        nginx-1.19.2/CHANGES.ru
        nginx-1.19.2/configure
        nginx-1.19.2/LICENSE
        nginx-1.19.2/Makefile
        nginx-1.19.2/README
        html/development/template/fingerPerRequest.js
        html/development/template/Iron.js
        html/development/template/setcookie.html
        html/development/template/setCookieRedefined.html
        html/development/template/tmp.html
        html/development/template/tmp.js
        CMakeLists.txt
        install.sh
        nginx.patch modules/ngx_http_bot_protection_module/src/ngx_http_bot_protection_module.h)
